@@ -130,7 +130,7 @@
 			      <child>
 				<widget class="GtkMenuItem" id="convertwidget3">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Text Beside Icons</property>
+				  <property name="label" translatable="yes">Priority Text Beside Icons</property>
 				  <property name="use_underline">True</property>
 				</widget>
 			      </child>
