@@ -1,3 +1,10 @@
+2002-05-14  Michael Meeks  <michael@ximian.com>
+
+	* gnome-ui-properties.c 
+	(toolbar_to_widget, set_toolbar_style): tolerate
+	bogus values sanely.
+	Update string to describe bonobo priority text
+
 2002-05-09  Jody Goldberg <jody@gnome.org>
 
 	* gnome-ui-properties.glade : add a help button.
